# ExcelBI-Challenges

./: README.md  challenge_table.md  environment.yaml  main.py  pyproject.toml  requirements.txt  template.py
2022/Q3/: 2022_03_01_data.csv  2022_03_01_solution.pq  2022_03_02_solution.pq  2022_03_04_data.csv  2022_03_04_solution.pq  2022_03_05_data.csv
2024/Q1/: 2024_01_04_solution.pq  2024_01_04_solution.py
2024/Q2/: 2024_02_01_data.csv  2024_02_01_solution.pq
2024/Q4/: 2024_04_01_solution.pq  2024_04_02_data.csv  2024_04_02_solution.pq  2024_04_03_data.csv  2024_04_03_solution.pq  2024_04_04_data.csv  2024_04_04_solution.pq  2024_04_04_solution.py  2024_04_05_data.csv  2024_04_05_solution.py  2024_04_06_data.csv  2024_04_06_solution.pq
data/2022/Q3/: ch2022_03_02.csv  ch2022_03_03.csv  ch2022_03_06.csv
data/2024/Q1/: ch2024_01_01.csv  ch2024_01_04.csv  ch2024_01_05.csv
data/2024/Q2/: ch2024_02_02.csv
data/2024/Q4/: ch2024_04_01.csv
resources/: challenge_name_reference.csv
solutions/powerquery/2022/Q3/: ch2022_03_03.pq
solutions/powerquery/2024/Q1/: ch2024_01_05.pq  ch2024_01_60.pq
solutions/powerquery/2024/Q2/: ch2024_02_02.pq
solutions/powerquery/2024/Q4/: ch2024_04_01.pq
solutions/python/2022/Q3/: ch2022_03_01.py  ch2022_03_02.py  ch2022_03_03.py
solutions/python/2024/Q1/: ch2024_01_02.py  ch2024_01_03.py  ch2024_01_04.py
