[tool.poetry]
name = "excelbi-challenges"
version = "0.1.0"
description = "The project is about solving challenges by ExcelBI"
authors = ["Udit Kumar Chatterjee <quantumudit@gmail.com>"]
license = "NC-SA"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
pyarrow = "^15.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"